deploy: 1d653588907789f05339f6261f6e05559ba9ab15

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -12,7 +12,7 @@
   <meta name="format-detection" content="telephone=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <title>Каркас</title>
+  <title>Contacts</title>
 
   
   
@@ -50,9 +50,9 @@
           <!--Brand-->
           <div class="header-top__logo">
             <div class="page-logo">
-                <span class="page-logo__container">
+                <a class="page-logo__container" href="#">
                   <img src="../assets/images/common/logo.png" alt="Логотип">
-                </span>
+                </a>
             </div>    </div>
           <!--Contacts-->
           <div class="header-top__contacts">
@@ -158,7 +158,7 @@
           <nav class="header-main__menu" role="navigation">
             <ul class="header-main__list">
               <li class="header-main__item">
-                <a class="header-main__link active" href="#">главная</a>
+                <a class="header-main__link" href="#">главная</a>
               </li>
               <li class="header-main__item">
                 <a class="header-main__link" href="#">о компании</a>
@@ -183,28 +183,119 @@
 </header>
 
 <div class="page__content">
-
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-
+<div class="inner-container inner-container--sidebar-enabled">
+  <aside class="inner-container__sidebar">
+<div class="sidebar-widget">
+    <div class="sidebar-widget__header">
+      <span class="sidebar-widget__title">Каталог товаров</span>
+    </div>
+  <div class="sidebar-widget__container">
+          <ul class="sidebar-list">
+            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Пункт меню</a></li>
+            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Пункт меню</a></li>
+            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Пункт меню</a></li>
+            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Пункт меню</a></li>
+            <li class="sidebar-list__item sidebar-list__item--parent">
+              <a class="sidebar-list__link" href="#">Пункт меню <i class="icon-arrowRight"></i></a>
+              <ul class="sidebar-list__submenu">
+                <li class="sidebar-list__item">
+                  <a href="#" class="sidebar-list__link">Пункт вложенного меню</a>
+                </li>
+                <li class="sidebar-list__item">
+                  <a href="#" class="sidebar-list__link">Еще один пункт вложенного меню</a>
+                </li>
+                <li class="sidebar-list__item">
+                  <a href="#" class="sidebar-list__link">Третий пункт подменю</a>
+                </li>
+              </ul>
+            </li>
+            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Пункт меню</a></li>
+            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Пункт меню</a></li>
+            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Пункт меню</a></li>
+            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Пункт меню</a></li>
+            <li class="sidebar-list__item sidebar-list__item--parent">
+              <a class="sidebar-list__link" href="#">Пункт меню <i class="icon-arrowRight"></i></a>
+              <ul class="sidebar-list__submenu">
+                <li class="sidebar-list__item">
+                  <a href="#" class="sidebar-list__link">Пункт вложенного меню</a>
+                </li>
+                <li class="sidebar-list__item">
+                  <a href="#" class="sidebar-list__link">Еще один пункт вложенного меню</a>
+                </li>
+                <li class="sidebar-list__item">
+                  <a href="#" class="sidebar-list__link">Третий пункт подменю</a>
+                </li>
+              </ul>
+            </li>
+            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Пункт меню</a></li>
+            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Пункт меню</a></li>
+            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Пункт меню</a></li>
+            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Пункт меню</a></li>
+          </ul>
+  </div>
+</div><div class="sidebar-widget">
+    <div class="sidebar-widget__header">
+      <span class="sidebar-widget__title">Производители</span>
+    </div>
+  <div class="sidebar-widget__container">
+          <ul class="sidebar-list">
+            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Производитель</a></li>
+            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Производитель</a></li>
+            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Производитель</a></li>
+            <li class="sidebar-list__item sidebar-list__item--parent">
+              <a class="sidebar-list__link" href="#">Пункт меню <i class="icon-arrowRight"></i></a>
+              <ul class="sidebar-list__submenu">
+                <li class="sidebar-list__item">
+                  <a href="#" class="sidebar-list__link">Пункт вложенного меню</a>
+                </li>
+                <li class="sidebar-list__item">
+                  <a href="#" class="sidebar-list__link">Еще один пункт вложенного меню</a>
+                </li>
+                <li class="sidebar-list__item">
+                  <a href="#" class="sidebar-list__link">Третий пункт подменю</a>
+                </li>
+              </ul>
+            </li>
+            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Производитель</a></li>
+            <li class="sidebar-list__item sidebar-list__item--parent">
+              <a class="sidebar-list__link" href="#">Пункт меню <i class="icon-arrowRight"></i></a>
+              <ul class="sidebar-list__submenu">
+                <li class="sidebar-list__item">
+                  <a href="#" class="sidebar-list__link">Пункт вложенного меню</a>
+                </li>
+                <li class="sidebar-list__item">
+                  <a href="#" class="sidebar-list__link">Еще один пункт вложенного меню</a>
+                </li>
+                <li class="sidebar-list__item">
+                  <a href="#" class="sidebar-list__link">Третий пункт подменю</a>
+                </li>
+              </ul>
+            </li>
+            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Производитель</a></li>
+            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Производитель</a></li>
+            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Производитель</a></li>
+          </ul>
+  </div>
+</div><div class="sidebar-widget">
+  <div class="sidebar-widget__container">
+          <div class="sidebar-banner">
+            <div class="sidebar-banner__container">
+              <a class="sidebar-banner__link" href="#"></a>
+              <div class="sidebar-banner__bg">  <picture>
+          
+          
+              <source data-srcset="../assets/images/sidebar/banner/bg.png" type="image/png">
+              <img class="lazy" data-sizes="auto" data-original="../assets/images/sidebar/banner/bg.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" alt>
+            </picture>
+          </div>
+              <h2 class="sidebar-banner__title">Открытые мастер-классы СибХЦ</h2>
+              <p class="sidebar-banner__text">На XVII Сибирском форуме хлебопечения пройдут открытые мастер-классы СибХЦ</p>
+              <div class="sidebar-banner__action"><a class="sidebar-banner__btn" href="#">Подробнее</a></div>
+            </div>
+          </div>  </div>
+</div>  </aside>
+  <main class="inner-container__content"></main>
+</div>
 </div>
 
 <footer class="page__footer footer">
