--- a/html/ui-toolkit.html
+++ b/html/ui-toolkit.html
@@ -34,7 +34,7 @@
 
 <!--  { {>core/favicon}}-->
 
-  <link rel="stylesheet" href="../css/main.css?v=2607">
+  <link rel="stylesheet" href="../css/main.css?v=3176">
 </head>
 
 <body class="page">
@@ -442,7 +442,7 @@
                                   <span class="faq-item__order">03.</span>
                                   <span class="faq-item__title">Насколько безопасна ваша продукция, как осуществляется контроль качества?</span>
                                   <div class="faq-item__icon">
-                                    <i class="faq-item__icon-container"></i>
+                                    <i class="icon-arrowDown"></i>
                                   </div>
                                 </div>
                                 <div class="faq-item__content js-accord__body">
@@ -465,7 +465,7 @@
   </div>
 </div>
 
-<script src="../js/vendors.js?v=2607" defer></script>
-  <script src="../js/main.js?v=2607" defer></script>
+<script src="../js/vendors.js?v=3176" defer></script>
+  <script src="../js/main.js?v=3176" defer></script>
 </div></body>
 </html>
