--- a/html/index.html
+++ b/html/index.html
@@ -336,13 +336,21 @@
             </a>
           </article>
         </li>
+        <li class="main__item">
+          <article class="main__article">
+            <h2 class="main__title">Контакты</h2>
+            <a class="main__link main__link--default" href="contacts.html" title="Контакты" aria-label="Link to Контакты page.">
+              <img src="../.meta/1000_default.svg" alt="Preview image." loading="lazy">
+            </a>
+          </article>
+        </li>
       </ul>
     </div>
   </main>
 
   <footer class="footer">
     <div class="container">
-      <span class="footer__credits">Build date: <span class="js-build-date">October 28, 2020, 1:50 PM</span></span>
+      <span class="footer__credits">Build date: <span class="js-build-date">October 29, 2020, 6:32 PM</span></span>
     </div>
   </footer>
 </div>
