deploy: 063aead0bbd95c3157141702e6f8f7e349396fea

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -34,7 +34,7 @@
 
 <!--  { {>core/favicon}}-->
 
-  <link rel="stylesheet" href="../css/main.css?v=3176">
+  <link rel="stylesheet" href="../css/main.css?v=4515">
 </head>
 
 <body class="page">
@@ -183,13 +183,13 @@
 </header>
 
 <div class="page__content">
-<div class="inner-container inner-container--sidebar-enabled">
-  <aside class="inner-container__sidebar">
-<div class="sidebar-widget">
-    <div class="sidebar-widget__header">
-      <span class="sidebar-widget__title">Каталог товаров</span>
-    </div>
-  <div class="sidebar-widget__container">
+<div class="internal-template internal-template--sidebar-enabled">
+  <aside class="internal-template__sidebar">
+    <div class="sidebar-widget">
+        <div class="sidebar-widget__header">
+          <span class="sidebar-widget__title">Каталог товаров</span>
+        </div>
+      <div class="sidebar-widget__container">
           <ul class="sidebar-list">
             <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Пункт меню</a></li>
             <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Пункт меню</a></li>
@@ -232,12 +232,12 @@
             <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Пункт меню</a></li>
             <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Пункт меню</a></li>
           </ul>
-  </div>
-</div><div class="sidebar-widget">
-    <div class="sidebar-widget__header">
-      <span class="sidebar-widget__title">Производители</span>
-    </div>
-  <div class="sidebar-widget__container">
+      </div>
+    </div><div class="sidebar-widget">
+        <div class="sidebar-widget__header">
+          <span class="sidebar-widget__title">Производители</span>
+        </div>
+      <div class="sidebar-widget__container">
           <ul class="sidebar-list">
             <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Производитель</a></li>
             <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Производитель</a></li>
@@ -275,9 +275,9 @@
             <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Производитель</a></li>
             <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Производитель</a></li>
           </ul>
-  </div>
-</div><div class="sidebar-widget">
-  <div class="sidebar-widget__container">
+      </div>
+    </div><div class="sidebar-widget">
+      <div class="sidebar-widget__container">
           <div class="sidebar-banner">
             <div class="sidebar-banner__container">
               <a class="sidebar-banner__link" href="#"></a>
@@ -293,8 +293,77 @@
               <div class="sidebar-banner__action"><a class="sidebar-banner__btn" href="#">Подробнее</a></div>
             </div>
           </div>  </div>
-</div>  </aside>
-  <main class="inner-container__content"></main>
+    </div>  </aside>
+  <main class="internal-template__container">
+    <div class="internal-template__breadcrumbs">
+      <div class="page-breadcrumbs">
+        <span class="page-breadcrumbs__item"><a class="page-breadcrumbs__link" href="#">СибХЦ</a></span>
+        <span class="page-breadcrumbs__item page-breadcrumbs__item--current">Контакты</span>
+      </div>
+    </div>
+    <div class="internal-template__header">
+      <h1 class="internal-template__title">Контакты</h1>
+    </div>
+    <div class="internal-template__content">
+      <section class="contacts-table">
+        <ul class="contacts-table__container">
+          <li class="contacts-table__item">
+            <table>
+              <thead>
+              <tr>
+                <td>ООО "Сибирский Хлебопекарный Центр"</td>
+              </tr>
+              </thead>
+              <tbody>
+              <tr>
+                <td><p><span>Адрес:</span> Россия, г. Красноярск, ул. Маерчака, 55</p></td>        </tr>
+              <tr>
+                <td><p><span>E-mail:</span> sibbc@yandex.ru</p></td>        </tr>
+              <tr>
+                <td><p><span>Отдел сбыта:</span> +7 (391) 220-58-66, <br> +7 (391) 221-57-73</p></td>        </tr>
+              <tr>
+                <td><p><span>Приемная:</span> +7 (391) 221 15 26</p></td>        </tr>
+              <tr>
+                <td><p><span>Генеральный директор:</span> Гацко Дмитрий Дмитриевич, <br> +7 (391) 221-15-26</p></td>        </tr>
+              <tr>
+                <td><p><span>Главный бухгалтер:</span> Толстогузова Светлана Анатольевна, <br> +7 (391) 221-15-26</p></td>        </tr>
+              </tbody>
+            </table>
+          </li>
+          <li class="contacts-table__item">
+            <table>
+              <thead>
+              <tr>
+                <td>Реквизиты:</td>
+              </tr>
+              </thead>
+              <tbody>
+              <tr>
+                <td><p><span>Юридический адрес:</span> 660048, г. Красноярск, ул. Маерчака, д. 55</p></td>        </tr>
+              <tr>
+                <td><p><span>Фактический адрес:</span> 660048, г. Красноярск, ул. Маерчака, д. 55</p></td>        </tr>
+              <tr>
+                <td><p><span>ИНН</span> 2460235904</p></td>        </tr>
+              <tr>
+                <td><p><span>КПП</span> 246001001</p></td>        </tr>
+              <tr>
+                <td><p><span>ОГРН</span> 1122468007617</p></td>        </tr>
+              <tr>
+                <td><p><span>Банк:</span> Сибирский филиал АО "Райффайзенбанк" г. Новосибирск</p></td>        </tr>
+              <tr>
+                <td><p><span>Р/сч</span> 40702810407000001757</p></td>        </tr>
+              <tr>
+                <td><p><span>К/сч</span> 30101810300000000799</p></td>        </tr>
+              <tr>
+                <td><p><span>БИК</span> 045004799</p></td>        </tr>
+              </tbody>
+            </table>
+          </li>
+        </ul>
+      </section>      <section class="simple-map">
+        <div class="simple-map__canvas js-ymap"></div>
+      </section>    </div>
+  </main>
 </div>
 </div>
 
@@ -368,7 +437,7 @@
 
 </div>
 
-<script src="../js/vendors.js?v=3176" defer></script>
-  <script src="../js/main.js?v=3176" defer></script>
+<script src="../js/vendors.js?v=4515" defer></script>
+  <script src="../js/main.js?v=4515" defer></script>
 </body>
 </html>
