deploy: 466e361e625a24e793b3809e6faa64e29aacbf2d

--- a/html/home.html
+++ b/html/home.html
@@ -34,7 +34,7 @@
 
 <!--  { {>core/favicon}}-->
 
-  <link rel="stylesheet" href="../css/main.css?v=4515">
+  <link rel="stylesheet" href="../css/main.css?v=1267">
 </head>
 
 <body class="page">
@@ -353,9 +353,9 @@
         <header class="section__header">
           <h2 class="section__title section__title--center">КАТАЛОГ ТОВАРОВ</h2>
         </header>
-        <div class="section__content">
-          <ul class="home-catalog__list">
-            <li class="home-catalog__item">
+        <div class="section__content shop-catalog">
+          <ul class="shop-catalog__list">
+            <li class="shop-catalog__item">
              <article class="catalog-item">
                <a href="#" class="catalog-item__link"></a>
                <div class="catalog-item__content">
@@ -371,7 +371,7 @@
                  <h3 class="catalog-item__title">Дрожжи</h3>
                </div>
              </article>          </li>
-            <li class="home-catalog__item">
+            <li class="shop-catalog__item">
              <article class="catalog-item">
                <a href="#" class="catalog-item__link"></a>
                <div class="catalog-item__content">
@@ -387,7 +387,7 @@
                  <h3 class="catalog-item__title">Смеси и концентраты</h3>
                </div>
              </article>          </li>
-            <li class="home-catalog__item">
+            <li class="shop-catalog__item">
              <article class="catalog-item">
                <a href="#" class="catalog-item__link"></a>
                <div class="catalog-item__content">
@@ -403,7 +403,7 @@
                  <h3 class="catalog-item__title">Улучшители</h3>
                </div>
              </article>          </li>
-            <li class="home-catalog__item">
+            <li class="shop-catalog__item">
              <article class="catalog-item">
                <a href="#" class="catalog-item__link"></a>
                <div class="catalog-item__content">
@@ -419,7 +419,7 @@
                  <h3 class="catalog-item__title">Маргарин</h3>
                </div>
              </article>          </li>
-            <li class="home-catalog__item">
+            <li class="shop-catalog__item">
              <article class="catalog-item">
                <a href="#" class="catalog-item__link"></a>
                <div class="catalog-item__content">
@@ -435,7 +435,7 @@
                  <h3 class="catalog-item__title">Глазури и кремы</h3>
                </div>
              </article>          </li>
-            <li class="home-catalog__item">
+            <li class="shop-catalog__item">
              <article class="catalog-item">
                <a href="#" class="catalog-item__link"></a>
                <div class="catalog-item__content">
@@ -451,7 +451,7 @@
                  <h3 class="catalog-item__title">Конфитюры и повидло</h3>
                </div>
              </article>          </li>
-            <li class="home-catalog__item">
+            <li class="shop-catalog__item">
              <article class="catalog-item">
                <a href="#" class="catalog-item__link"></a>
                <div class="catalog-item__content">
@@ -467,7 +467,7 @@
                  <h3 class="catalog-item__title">Гели</h3>
                </div>
              </article>          </li>
-            <li class="home-catalog__item">
+            <li class="shop-catalog__item">
              <article class="catalog-item">
                <a href="#" class="catalog-item__link"></a>
                <div class="catalog-item__content">
@@ -483,7 +483,7 @@
                  <h3 class="catalog-item__title">Семена и Орехи</h3>
                </div>
              </article>          </li>
-            <li class="home-catalog__item">
+            <li class="shop-catalog__item">
              <article class="catalog-item">
                <a href="#" class="catalog-item__link"></a>
                <div class="catalog-item__content">
@@ -987,7 +987,7 @@
 
 </div>
 
-<script src="../js/vendors.js?v=4515" defer></script>
-  <script src="../js/main.js?v=4515" defer></script>
+<script src="../js/vendors.js?v=1267" defer></script>
+  <script src="../js/main.js?v=1267" defer></script>
 </body>
 </html>
