--- a/html/index.html
+++ b/html/index.html
@@ -330,17 +330,25 @@
         </li>
         <li class="main__item">
           <article class="main__article">
-            <h2 class="main__title">404</h2>
-            <a class="main__link" href="404.html" title="404" aria-label="Link to 404 page.">
-              <img src="../.meta/03_404.png" alt="Preview image." loading="lazy">
+            <h2 class="main__title">Контакты</h2>
+            <a class="main__link" href="contacts.html" title="Контакты" aria-label="Link to Контакты page.">
+              <img src="../.meta/03_contacts.jpg" alt="Preview image." loading="lazy">
             </a>
           </article>
         </li>
         <li class="main__item">
           <article class="main__article">
-            <h2 class="main__title">Контакты</h2>
-            <a class="main__link main__link--default" href="contacts.html" title="Контакты" aria-label="Link to Контакты page.">
-              <img src="../.meta/1000_default.svg" alt="Preview image." loading="lazy">
+            <h2 class="main__title">Каталог товаров</h2>
+            <a class="main__link" href="shop.html" title="Каталог товаров" aria-label="Link to Каталог товаров page.">
+              <img src="../.meta/04_shop.jpg" alt="Preview image." loading="lazy">
+            </a>
+          </article>
+        </li>
+        <li class="main__item">
+          <article class="main__article">
+            <h2 class="main__title">404</h2>
+            <a class="main__link" href="404.html" title="404" aria-label="Link to 404 page.">
+              <img src="../.meta/13_404.png" alt="Preview image." loading="lazy">
             </a>
           </article>
         </li>
@@ -350,7 +358,7 @@
 
   <footer class="footer">
     <div class="container">
-      <span class="footer__credits">Build date: <span class="js-build-date">October 29, 2020, 9:57 PM</span></span>
+      <span class="footer__credits">Build date: <span class="js-build-date">October 29, 2020, 10:29 PM</span></span>
     </div>
   </footer>
 </div>
