deploy: ba1380f9e941736daad633fe11975b0aabbf75d1

--- a/html/shop.html
+++ b/html/shop.html
@@ -12,7 +12,7 @@
   <meta name="format-detection" content="telephone=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <title>Contacts</title>
+  <title>Каталог товаров</title>
 
   
   
@@ -34,7 +34,7 @@
 
 <!--  { {>core/favicon}}-->
 
-  <link rel="stylesheet" href="../css/main.css?v=1267">
+  <link rel="stylesheet" href="../css/main.css?v=2186">
 </head>
 
 <body class="page">
@@ -164,7 +164,7 @@
                 <a class="header-main__link" href="#">о компании</a>
               </li>
               <li class="header-main__item">
-                <a class="header-main__link" href="#">каталог товаров</a>
+                <a class="header-main__link active" href="#">каталог товаров</a>
               </li>
               <li class="header-main__item">
                 <a class="header-main__link" href="#">мастер-классы</a>
@@ -624,7 +624,7 @@
 
 </div>
 
-<script src="../js/vendors.js?v=1267" defer></script>
-  <script src="../js/main.js?v=1267" defer></script>
+<script src="../js/vendors.js?v=2186" defer></script>
+  <script src="../js/main.js?v=2186" defer></script>
 </body>
 </html>
