--- a/html/index.html
+++ b/html/index.html
@@ -346,6 +346,14 @@
         </li>
         <li class="main__item">
           <article class="main__article">
+            <h2 class="main__title">Каталог товаров / Категория (группа)</h2>
+            <a class="main__link" href="shop--category.html" title="Каталог товаров / Категория (группа)" aria-label="Link to Каталог товаров / Категория (группа) page.">
+              <img src="../.meta/05_shop--category.jpg" alt="Preview image." loading="lazy">
+            </a>
+          </article>
+        </li>
+        <li class="main__item">
+          <article class="main__article">
             <h2 class="main__title">404</h2>
             <a class="main__link" href="404.html" title="404" aria-label="Link to 404 page.">
               <img src="../.meta/13_404.png" alt="Preview image." loading="lazy">
@@ -358,7 +366,7 @@
 
   <footer class="footer">
     <div class="container">
-      <span class="footer__credits">Build date: <span class="js-build-date">October 29, 2020, 10:29 PM</span></span>
+      <span class="footer__credits">Build date: <span class="js-build-date">October 30, 2020, 11:14 AM</span></span>
     </div>
   </footer>
 </div>
