deploy: 53225ea2bb92562c04a8b77841a4aafc3cca8a06

--- a/html/index.html
+++ b/html/index.html
@@ -347,8 +347,16 @@
         <li class="main__item">
           <article class="main__article">
             <h2 class="main__title">Каталог товаров / Категория (группа)</h2>
-            <a class="main__link" href="shop--category.html" title="Каталог товаров / Категория (группа)" aria-label="Link to Каталог товаров / Категория (группа) page.">
-              <img src="../.meta/05_shop--category.jpg" alt="Preview image." loading="lazy">
+            <a class="main__link" href="shop--category-group.html" title="Каталог товаров / Категория (группа)" aria-label="Link to Каталог товаров / Категория (группа) page.">
+              <img src="../.meta/05_shop--category-group.jpg" alt="Preview image." loading="lazy">
+            </a>
+          </article>
+        </li>
+        <li class="main__item">
+          <article class="main__article">
+            <h2 class="main__title">Каталог товаров / Категория товара</h2>
+            <a class="main__link" href="shop--category-single.html" title="Каталог товаров / Категория товара" aria-label="Link to Каталог товаров / Категория товара page.">
+              <img src="../.meta/06_shop--category-single.jpg" alt="Preview image." loading="lazy">
             </a>
           </article>
         </li>
@@ -366,7 +374,7 @@
 
   <footer class="footer">
     <div class="container">
-      <span class="footer__credits">Build date: <span class="js-build-date">October 30, 2020, 11:14 AM</span></span>
+      <span class="footer__credits">Build date: <span class="js-build-date">October 30, 2020, 11:33 AM</span></span>
     </div>
   </footer>
 </div>
