deploy: ab8eb414c469a3358acd6af0885a71bacd1fd40e

--- a/html/index.html
+++ b/html/index.html
@@ -368,13 +368,21 @@
             </a>
           </article>
         </li>
+        <li class="main__item">
+          <article class="main__article">
+            <h2 class="main__title">Каталог товаров / Товар</h2>
+            <a class="main__link main__link--default" href="shop--product.html" title="Каталог товаров / Товар" aria-label="Link to Каталог товаров / Товар page.">
+              <img src="../.meta/1000_default.svg" alt="Preview image." loading="lazy">
+            </a>
+          </article>
+        </li>
       </ul>
     </div>
   </main>
 
   <footer class="footer">
     <div class="container">
-      <span class="footer__credits">Build date: <span class="js-build-date">October 30, 2020, 11:33 AM</span></span>
+      <span class="footer__credits">Build date: <span class="js-build-date">October 31, 2020, 12:25 AM</span></span>
     </div>
   </footer>
 </div>
