--- a/html/shop--category-single.html
+++ b/html/shop--category-single.html
@@ -34,7 +34,7 @@
 
 <!--  { {>core/favicon}}-->
 
-  <link rel="stylesheet" href="../css/main.css?v=2499">
+  <link rel="stylesheet" href="../css/main.css?v=2446">
 </head>
 
 <body class="page">
@@ -191,46 +191,60 @@
         </div>
       <div class="sidebar-widget__container">
           <ul class="sidebar-list">
-            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Пункт меню</a></li>
-            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Пункт меню</a></li>
-            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Пункт меню</a></li>
-            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Пункт меню</a></li>
+            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Категория товара</a></li>
+            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Категория товара</a></li>
+            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Категория товара</a></li>
+            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Категория товара</a></li>
             <li class="sidebar-list__item sidebar-list__item--parent">
-              <a class="sidebar-list__link sidebar-list__link--active" href="#">Пункт меню <i class="icon-arrowRight"></i></a>
+              <a class="sidebar-list__link sidebar-list__link--active" href="#">Категория товара <i class="icon-arrowRight"></i></a>
               <ul class="sidebar-list__submenu">
                 <li class="sidebar-list__item">
-                  <a href="#" class="sidebar-list__link">Пункт вложенного меню</a>
+                  <a href="#" class="sidebar-list__link">Категория товара</a>
                 </li>
                 <li class="sidebar-list__item">
-                  <a href="#" class="sidebar-list__link sidebar-list__link--active">Еще один пункт вложенного меню</a>
+                  <a href="#" class="sidebar-list__link sidebar-list__link--active">Еще одна категория товара</a>
                 </li>
                 <li class="sidebar-list__item">
                   <a href="#" class="sidebar-list__link">Третий пункт подменю</a>
                 </li>
               </ul>
             </li>
-            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Пункт меню</a></li>
-            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Пункт меню</a></li>
-            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Пункт меню</a></li>
-            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Пункт меню</a></li>
             <li class="sidebar-list__item sidebar-list__item--parent">
-              <a class="sidebar-list__link" href="#">Пункт меню <i class="icon-arrowRight"></i></a>
+              <a class="sidebar-list__link sidebar-list__link--active" href="#">Категория товара <i class="icon-arrowRight"></i></a>
               <ul class="sidebar-list__submenu">
                 <li class="sidebar-list__item">
-                  <a href="#" class="sidebar-list__link">Пункт вложенного меню</a>
+                  <a href="#" class="sidebar-list__link">Категория товара</a>
                 </li>
                 <li class="sidebar-list__item">
-                  <a href="#" class="sidebar-list__link">Еще один пункт вложенного меню</a>
+                  <a href="#" class="sidebar-list__link sidebar-list__link--active">Еще одна категория товара</a>
                 </li>
                 <li class="sidebar-list__item">
                   <a href="#" class="sidebar-list__link">Третий пункт подменю</a>
                 </li>
               </ul>
             </li>
-            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Пункт меню</a></li>
-            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Пункт меню</a></li>
-            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Пункт меню</a></li>
-            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Пункт меню</a></li>
+            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Категория товара</a></li>
+            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Категория товара</a></li>
+            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Категория товара</a></li>
+            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Категория товара</a></li>
+            <li class="sidebar-list__item sidebar-list__item--parent">
+              <a class="sidebar-list__link" href="#">Категория товара <i class="icon-arrowRight"></i></a>
+              <ul class="sidebar-list__submenu">
+                <li class="sidebar-list__item">
+                  <a href="#" class="sidebar-list__link">Категория товара</a>
+                </li>
+                <li class="sidebar-list__item">
+                  <a href="#" class="sidebar-list__link">Еще одна категория товара</a>
+                </li>
+                <li class="sidebar-list__item">
+                  <a href="#" class="sidebar-list__link">Третий пункт подменю</a>
+                </li>
+              </ul>
+            </li>
+            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Категория товара</a></li>
+            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Категория товара</a></li>
+            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Категория товара</a></li>
+            <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Категория товара</a></li>
           </ul>
       </div>
     </div><div class="sidebar-widget">
@@ -242,35 +256,7 @@
             <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Производитель</a></li>
             <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Производитель</a></li>
             <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Производитель</a></li>
-            <li class="sidebar-list__item sidebar-list__item--parent">
-              <a class="sidebar-list__link" href="#">Пункт меню <i class="icon-arrowRight"></i></a>
-              <ul class="sidebar-list__submenu">
-                <li class="sidebar-list__item">
-                  <a href="#" class="sidebar-list__link">Пункт вложенного меню</a>
-                </li>
-                <li class="sidebar-list__item">
-                  <a href="#" class="sidebar-list__link">Еще один пункт вложенного меню</a>
-                </li>
-                <li class="sidebar-list__item">
-                  <a href="#" class="sidebar-list__link">Третий пункт подменю</a>
-                </li>
-              </ul>
-            </li>
             <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Производитель</a></li>
-            <li class="sidebar-list__item sidebar-list__item--parent">
-              <a class="sidebar-list__link" href="#">Пункт меню <i class="icon-arrowRight"></i></a>
-              <ul class="sidebar-list__submenu">
-                <li class="sidebar-list__item">
-                  <a href="#" class="sidebar-list__link">Пункт вложенного меню</a>
-                </li>
-                <li class="sidebar-list__item">
-                  <a href="#" class="sidebar-list__link">Еще один пункт вложенного меню</a>
-                </li>
-                <li class="sidebar-list__item">
-                  <a href="#" class="sidebar-list__link">Третий пункт подменю</a>
-                </li>
-              </ul>
-            </li>
             <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Производитель</a></li>
             <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Производитель</a></li>
             <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Производитель</a></li>
@@ -469,7 +455,7 @@
 
 </div>
 
-<script src="../js/vendors.js?v=2499" defer></script>
-  <script src="../js/main.js?v=2499" defer></script>
+<script src="../js/vendors.js?v=2446" defer></script>
+  <script src="../js/main.js?v=2446" defer></script>
 </body>
 </html>
