deploy: 0fd7211a57ccaf613338ee00c02018fcd764034c

--- a/html/shop--product.html
+++ b/html/shop--product.html
@@ -34,7 +34,7 @@
 
 <!--  { {>core/favicon}}-->
 
-  <link rel="stylesheet" href="../css/main.css?v=2446">
+  <link rel="stylesheet" href="../css/main.css?v=2493">
 </head>
 
 <body class="page">
@@ -307,14 +307,14 @@
           <div class="category-product__description">
             <h3 class="category-product__subtitle">Производитель:</h3>
             <div class="category-product__brand">
-              <div class="category-product__brand-image">
+              <a href="#" class="category-product__brand-image">
                   <picture>
                 
                 
                     <source data-srcset="../assets/images/brands/dukat.png" type="image/png">
                     <img class="lazy" data-sizes="auto" data-original="../assets/images/brands/dukat.png" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" alt>
                   </picture>
-              </div>
+              </a>
             </div>
             <h3 class="category-product__subtitle">Описание</h3>
             <p class="category-product__text">
@@ -446,7 +446,7 @@
 
 </div>
 
-<script src="../js/vendors.js?v=2446" defer></script>
-  <script src="../js/main.js?v=2446" defer></script>
+<script src="../js/vendors.js?v=2493" defer></script>
+  <script src="../js/main.js?v=2493" defer></script>
 </body>
 </html>
