--- a/html/index.html
+++ b/html/index.html
@@ -370,6 +370,14 @@
         </li>
         <li class="main__item">
           <article class="main__article">
+            <h2 class="main__title">Политика конфиденциальности</h2>
+            <a class="main__link" href="privacy-policy.html" title="Политика конфиденциальности" aria-label="Link to Политика конфиденциальности page.">
+              <img src="../.meta/14_privacy-policy.jpg" alt="Preview image." loading="lazy">
+            </a>
+          </article>
+        </li>
+        <li class="main__item">
+          <article class="main__article">
             <h2 class="main__title">Каталог товаров / Товар</h2>
             <a class="main__link main__link--default" href="shop--product.html" title="Каталог товаров / Товар" aria-label="Link to Каталог товаров / Товар page.">
               <img src="../.meta/1000_default.svg" alt="Preview image." loading="lazy">
@@ -382,7 +390,7 @@
 
   <footer class="footer">
     <div class="container">
-      <span class="footer__credits">Build date: <span class="js-build-date">October 31, 2020, 12:41 AM</span></span>
+      <span class="footer__credits">Build date: <span class="js-build-date">October 31, 2020, 1:17 AM</span></span>
     </div>
   </footer>
 </div>
