deploy: 8f4670023717bee6f9f8201cebb810b3f1e7d5cd

--- a/html/index.html
+++ b/html/index.html
@@ -362,6 +362,22 @@
         </li>
         <li class="main__item">
           <article class="main__article">
+            <h2 class="main__title">Каталог товаров / Товар</h2>
+            <a class="main__link" href="shop--product.html" title="Каталог товаров / Товар" aria-label="Link to Каталог товаров / Товар page.">
+              <img src="../.meta/07_shop--product.jpg" alt="Preview image." loading="lazy">
+            </a>
+          </article>
+        </li>
+        <li class="main__item">
+          <article class="main__article">
+            <h2 class="main__title">Каталог товаров / Производитель</h2>
+            <a class="main__link" href="shop--brand.html" title="Каталог товаров / Производитель" aria-label="Link to Каталог товаров / Производитель page.">
+              <img src="../.meta/08_shop--brand.jpg" alt="Preview image." loading="lazy">
+            </a>
+          </article>
+        </li>
+        <li class="main__item">
+          <article class="main__article">
             <h2 class="main__title">404</h2>
             <a class="main__link" href="404.html" title="404" aria-label="Link to 404 page.">
               <img src="../.meta/13_404.png" alt="Preview image." loading="lazy">
@@ -376,21 +392,13 @@
             </a>
           </article>
         </li>
-        <li class="main__item">
-          <article class="main__article">
-            <h2 class="main__title">Каталог товаров / Товар</h2>
-            <a class="main__link main__link--default" href="shop--product.html" title="Каталог товаров / Товар" aria-label="Link to Каталог товаров / Товар page.">
-              <img src="../.meta/1000_default.svg" alt="Preview image." loading="lazy">
-            </a>
-          </article>
-        </li>
       </ul>
     </div>
   </main>
 
   <footer class="footer">
     <div class="container">
-      <span class="footer__credits">Build date: <span class="js-build-date">October 31, 2020, 1:17 AM</span></span>
+      <span class="footer__credits">Build date: <span class="js-build-date">October 31, 2020, 1:58 AM</span></span>
     </div>
   </footer>
 </div>
