--- a/html/index.html
+++ b/html/index.html
@@ -378,6 +378,14 @@
         </li>
         <li class="main__item">
           <article class="main__article">
+            <h2 class="main__title">Мастер классы</h2>
+            <a class="main__link" href="events.html" title="Мастер классы" aria-label="Link to Мастер классы page.">
+              <img src="../.meta/09_events.jpg" alt="Preview image." loading="lazy">
+            </a>
+          </article>
+        </li>
+        <li class="main__item">
+          <article class="main__article">
             <h2 class="main__title">404</h2>
             <a class="main__link" href="404.html" title="404" aria-label="Link to 404 page.">
               <img src="../.meta/13_404.png" alt="Preview image." loading="lazy">
@@ -392,13 +400,29 @@
             </a>
           </article>
         </li>
+        <li class="main__item">
+          <article class="main__article">
+            <h2 class="main__title">Блог / Новость</h2>
+            <a class="main__link main__link--default" href="blog-single.html" title="Блог / Новость" aria-label="Link to Блог / Новость page.">
+              <img src="../.meta/1000_default.svg" alt="Preview image." loading="lazy">
+            </a>
+          </article>
+        </li>
+        <li class="main__item">
+          <article class="main__article">
+            <h2 class="main__title">Блог</h2>
+            <a class="main__link main__link--default" href="blog.html" title="Блог" aria-label="Link to Блог page.">
+              <img src="../.meta/1000_default.svg" alt="Preview image." loading="lazy">
+            </a>
+          </article>
+        </li>
       </ul>
     </div>
   </main>
 
   <footer class="footer">
     <div class="container">
-      <span class="footer__credits">Build date: <span class="js-build-date">October 31, 2020, 1:58 AM</span></span>
+      <span class="footer__credits">Build date: <span class="js-build-date">October 31, 2020, 3:00 AM</span></span>
     </div>
   </footer>
 </div>
