deploy: d61643a8f061f685dc87b4334f0ecced1823832b

--- a/html/index.html
+++ b/html/index.html
@@ -330,6 +330,14 @@
         </li>
         <li class="main__item">
           <article class="main__article">
+            <h2 class="main__title">О Компании</h2>
+            <a class="main__link" href="about.html" title="О Компании" aria-label="Link to О Компании page.">
+              <img src="../.meta/03_about.jpg" alt="Preview image." loading="lazy">
+            </a>
+          </article>
+        </li>
+        <li class="main__item">
+          <article class="main__article">
             <h2 class="main__title">Контакты</h2>
             <a class="main__link" href="contacts.html" title="Контакты" aria-label="Link to Контакты page.">
               <img src="../.meta/03_contacts.jpg" alt="Preview image." loading="lazy">
@@ -386,6 +394,30 @@
         </li>
         <li class="main__item">
           <article class="main__article">
+            <h2 class="main__title">Мастер классы / Событие</h2>
+            <a class="main__link" href="events-single.html" title="Мастер классы / Событие" aria-label="Link to Мастер классы / Событие page.">
+              <img src="../.meta/10_events-single.jpg" alt="Preview image." loading="lazy">
+            </a>
+          </article>
+        </li>
+        <li class="main__item">
+          <article class="main__article">
+            <h2 class="main__title">Блог</h2>
+            <a class="main__link" href="blog.html" title="Блог" aria-label="Link to Блог page.">
+              <img src="../.meta/11_blog.jpg" alt="Preview image." loading="lazy">
+            </a>
+          </article>
+        </li>
+        <li class="main__item">
+          <article class="main__article">
+            <h2 class="main__title">Блог / Новость</h2>
+            <a class="main__link" href="blog-single.html" title="Блог / Новость" aria-label="Link to Блог / Новость page.">
+              <img src="../.meta/12_blog-single.jpg" alt="Preview image." loading="lazy">
+            </a>
+          </article>
+        </li>
+        <li class="main__item">
+          <article class="main__article">
             <h2 class="main__title">404</h2>
             <a class="main__link" href="404.html" title="404" aria-label="Link to 404 page.">
               <img src="../.meta/13_404.png" alt="Preview image." loading="lazy">
@@ -400,29 +432,13 @@
             </a>
           </article>
         </li>
-        <li class="main__item">
-          <article class="main__article">
-            <h2 class="main__title">Блог / Новость</h2>
-            <a class="main__link main__link--default" href="blog-single.html" title="Блог / Новость" aria-label="Link to Блог / Новость page.">
-              <img src="../.meta/1000_default.svg" alt="Preview image." loading="lazy">
-            </a>
-          </article>
-        </li>
-        <li class="main__item">
-          <article class="main__article">
-            <h2 class="main__title">Блог</h2>
-            <a class="main__link main__link--default" href="blog.html" title="Блог" aria-label="Link to Блог page.">
-              <img src="../.meta/1000_default.svg" alt="Preview image." loading="lazy">
-            </a>
-          </article>
-        </li>
       </ul>
     </div>
   </main>
 
   <footer class="footer">
     <div class="container">
-      <span class="footer__credits">Build date: <span class="js-build-date">October 31, 2020, 3:00 AM</span></span>
+      <span class="footer__credits">Build date: <span class="js-build-date">October 31, 2020, 3:24 AM</span></span>
     </div>
   </footer>
 </div>
